# rhino-xfwm4-theme

./: meson.build  meson_options.txt
xfwm4/src/default/xfwm4/: render-xfwm4-assets.sh
